# factory_hack

./: .gitignore  docker-compose.yml  elevenlabs.py  nx.json  package-lock.json  package.json  pyproject.toml  tsconfig.base.json
app-express/voice-chat/: chat.ts  package-lock.json  package.json  tsconfig.json
app-react/: project.json  vite.config.ts
app-react/hac_a_day/: package-lock.json  package.json  vite.config.ts
app-react/hac_a_day/src/: App.tsx  app_bkp.tsx  chat.tsx
app-react/src/: main.tsx
app-react/src/app/: app.tsx
app-react/src/components/: Box.tsx
app-react/test/: package.json
apps/api-langflow/: Dockerfile  startup.sh
live-audio/: index.tsx  package-lock.json
