[tool.nx]
autoActivate = true

[installer]
parallel = true

[tool.poetry]
name = "verkos-monorepo"
version = "1.0.0"
description = "Verkos AI Monorepo with Python Services"
authors = ["Verkos Team"]
license = "Proprietary"
readme = "README.md"
packages = [
  { include = "app", from = "apps/backend/api-langflow" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
# api-langflow production dependencies (copied exactly from api-langflow/pyproject.toml)
google-generativeai = "^0.8.5"
pydantic = ">=2.10.1,<2.11.0"
pymongo = "^4.10.1"
motor = "^3.7.1"
dnspython = "^2.7.0"
weaviate-client = "^4.10.2"
boto3 = "^1.34.162"
requests = "^2.32.0"
langfuse = "^2.53.9"

[tool.poetry.group.dev.dependencies]
autopep8 = "2.3.1"
flake8 = "7.1.1"
pytest = "8.3.4"
pytest-sugar = "1.0.0"
pytest-cov = "6.0.0"
pytest-html = "4.1.1"
langflow = "1.4.2"

[build-system]
requires = ["poetry-core==1.1.0"]
build-backend = "poetry.core.masonry.api"
